--- a/src/components/confirm-panel.css
+++ b/src/components/confirm-panel.css
@@ -1,3 +1,7 @@
+.scroll-lock {
+	overflow-y: hidden;
+}
+
 .confirm-panel .modal-content div {
 	margin: 0 0 20px;
 	text-align: center;
@@ -6,7 +10,7 @@
 
 .confirm-panel button {
 	height: auto;
-	width: 98%;
+	width: 100%;
 	padding: 10px;
 	margin-top: 5px;
 	cursor: pointer;
