--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -3,22 +3,25 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.6);
-    z-index: 100;
+    z-index: 2001;
     top: 0;
     left: 0;
 }
 
 .modal-container {
-	position: absolute;
+	position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 101;
+    z-index: 2002;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal {
-    position: absolute;
+    position: relative;
 	max-width: 600px;
     background: #DDD;
     padding: 10px 20px;
@@ -292,4 +295,11 @@
 .hoverText.hoverText--active {
     opacity: 1;
     transition: all 0.2s ease;
+}
+
+@media only screen and (max-width: 480px) {
+    .modal {
+        min-width: unset;
+        max-width: 360px;
+    }
 }
