--- a/src/components/template.css
+++ b/src/components/template.css
@@ -13,3 +13,20 @@
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
+
+button.primary {
+	border: none;
+	background-color: #425583;
+	color: white;
+	padding: 10px 20px;
+    height: 36px;
+    width: 75%;
+    margin-top: 15px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+button.primary:hover {
+	background: #425583DD;
+	transition: all 0.2s ease;
+}
