--- a/src/components/streamlabs-panel.css
+++ b/src/components/streamlabs-panel.css
@@ -1,43 +1,54 @@
-.integration--patreon .integration-content {
-	display: flex;
-	padding: 0;
+.integration--streamlabs {
+    background: #DDD;
 }
 
-.patreon--left {
+.integration--streamlabs .integration-content {
+	display: flex;
+	padding: 10px 20px;
+}
+
+.integration--streamlabs .integration-header {
+    background: #31c3a2;
+}
+
+.integration--streamlabs .integration-unlink {
+    flex: 1 1;
+    text-align: right;
+    margin-right: 10px;
+}
+
+.integration--streamlabs .integration-settings {
+    flex: 0;
+    margin-right: 0;
+}
+
+.streamlabs--left {
 	padding: 20px;
     background: #BBB;
     box-shadow: 0px 1px 2px #333;
     z-index: 10;
 }
 
-.patreon--thumb img {
+.streamlabs--thumb img {
 	width: 100px;
 	height: 100px;
 }
 
-.patreon--right {
+.streamlabs--right {
 	flex: 1;
 }
 
-.patreonLink {
+.streamlabsLink {
     display: flex;
     text-decoration: none;
     margin: 0 auto;
     width: fit-content;
+    background: #050d12;
+    padding: 5px;
 }
 
-.integration--patreon .integration-unlink {
-    flex: 1 1;
-    text-align: right;
-    margin-right: 10px;
-}
-
-.integration--patreon .integration-settings {
-    flex: 0;
-}
-
-.patreonLink span {
-    background: rgb(249, 104, 84);
+.streamlabsLink span {
+    background: #050d12;
     padding: 10px;
     font-size: 14px;
     text-transform: uppercase;
@@ -48,7 +59,7 @@
     justify-content: center;
 }
 
-.patreon--banner {
+.streamlabs--banner {
 	background: #e88446;
     padding-left: 10px;
     display: flex;
@@ -59,11 +70,11 @@
     align-items: center;
 }
 
-.patreon--banner div {
+.streamlabs--banner div {
 	flex: 1;
 }
 
-.patreon--banner .follow-button {
+.streamlabs--banner .follow-button {
 	align-self: flex-end;
 	justify-content: flex-end;
 	background: white;
@@ -72,14 +83,14 @@
     font-weight: 700;
 }
 
-.integration--patreon .feedback {
+.integration--streamlabs .feedback {
     padding: 10px;
     background: #fffc8c;
     color: black;
     margin-bottom: 10px;
 }
 
-.patreon--content {
+.streamlabs--content {
 	padding: 10px;
 	display: flex;
     align-items: center;
@@ -90,8 +101,8 @@
     flex-direction: column;
 }
 
-.patreon--content .support,
-.patreon--content .upgrade {
+.streamlabs--content .support,
+.streamlabs--content .upgrade {
 	text-align: center;
     background: white;
     padding: 10px;
@@ -100,7 +111,7 @@
     margin: 0 10px;
 }
 
-.patreon--content.patreon--active .upgrade {
+.streamlabs--content.streamlabs--active .upgrade {
     background: none;
     border-top: 1px solid;
     border-radius: 0px;
@@ -109,7 +120,7 @@
     margin-top: 20px;
 }
 
-.patreon--content button {
+.streamlabs--content button {
 	background: rgb(232, 91, 70);
     border: none;
     padding: 10px 15px;
@@ -121,11 +132,11 @@
     cursor: pointer;
 }
 
-.patreon--content h3 {
+.streamlabs--content h3 {
 	text-align: center;
 }
 
-.patreon--features {
+.streamlabs--features {
 	display: -webkit-flex;
     display: flex;
     width: 100%;
@@ -135,7 +146,7 @@
     justify-content: center;
 }
 
-.patreon--features div {
+.streamlabs--features div {
 	width: 48%;
     margin-top: 1px;
     background: white;
@@ -158,17 +169,17 @@
     margin-top: 10px;
 }
 
-.integration--patreon .integration-sync.active img,
+.integration--streamlabs .integration-sync.active img,
 .integration--twitch .integration-sync.active img {
     animation: rotation 1s infinite linear;
 }
 
-.patreon--unlink {
+.streamlabs--unlink {
     display: flex;
     flex: 1;
 }
 
-.patreon--unlink a {
+.streamlabs--unlink a {
         padding: 6px 12px;
     background: rgb(232, 91, 70);
     color: white;
@@ -186,24 +197,21 @@
 }
 
 @media only screen and (max-width: 480px) {
-    .integration--patreon .integration-content {
-        flex-direction: column;
-    }
 
-    .patreon--thumb {
+    .streamlabs--thumb {
         text-align: center;
     }
 
-    .patreon--left {
+    .streamlabs--left {
         padding: 10px;
     }
 
-    .patreon--thumb img {
+    .streamlabs--thumb img {
         width: 85px;
         height: 85px;
     }
 
-    .patreon--features div {
+    .streamlabs--features div {
         width: 45%;
         display: flex;
         justify-content: center;
