--- a/src/app.css
+++ b/src/app.css
@@ -81,6 +81,10 @@ body {
 	font-weight: bold;
 }
 
+.center {
+	text-align: center;
+}
+
 @media only screen and (max-width: 480px) {
 	
 	#achievements-header {
