--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    height: 100px;
+    height: 125px;
     background: #2f4882;
     box-shadow: 0px -1px 2px #111;
     color: white;
@@ -7,25 +7,43 @@
     margin-top: 15px;
     transition: all 0.2s ease;
     z-index: 1000;
+    padding-bottom: 25px;
 }
 
 .footer-content {
 	max-width: 800px;
-    padding-top: 25px;
+    padding-top: 15px;
     margin: 0 auto;
     text-align: center;
 }
 
 .footer-content.social {
-    padding-top: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 125px;
+    padding-top: 25px;
 }
 
-.footer-content.social a {
+.footer-content a {
+    text-decoration: none;
+    color: white;
+    transition: all 0.2s ease;
+}
 
+.footer-content a:hover {
+    color: #BBB;
+    transition: all 0.2s ease;
+}
+
+.footer-content.legal {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-content.legal span,
+.footer-content.legal a {
+    margin-right: 5px;
 }
 
 .footer-content.social img {
@@ -34,7 +52,7 @@
 
 @media only screen and (max-width: 480px) {
     .footer {
-        height: 80px;
+        height: 110px;
         font-size: 14px;
         transition: all 0.2s ease;
     }
