--- a/src/routes/gold-page.css
+++ b/src/routes/gold-page.css
@@ -35,6 +35,7 @@
 	justify-content: center;
 	padding: 2px 4px;
 	background: rgba(0,0,0,0.4);
+	align-items: center;
 }
 
 .gold-page .feature-table .row.row-stripe {
@@ -61,4 +62,13 @@
 .gold-page a,
 .gold-page a:visited {
 	color: #ecdc19;
+}
+
+.iconLabel {
+	display: flex;
+	align-items: center;
+}
+
+.iconLabel img {
+	margin-left: 5px;
 }
