Notice for disabled custom achievements

--- a/src/routes/achievement-page.css
+++ b/src/routes/achievement-page.css
@@ -1,3 +1,8 @@
+.gold-white,
+.gold-white:visited,
+.gold-white:active {
+	color: #425583;
+}
 .achievement-page--inactiveWarning {
 	padding: 10px 15px;
     background-color: #fffc8c;
