--- a/src/components/notice.css
+++ b/src/components/notice.css
@@ -2,20 +2,23 @@
 	position: fixed;
     z-index: 2000;
     max-width: 800px;
-    padding: 0px;
-    background: #DDD;
+    padding: 10px;
+    background: #e8f391;
     color: black;
-    border-radius: 10px;
     box-shadow: 2px 2px 4px #000;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-family: sans-serif;
     opacity: 0;
+    -webkit-transition: opacity 0.2s ease;
     transition: opacity 0.2s ease;
+    width: 60%;
+    text-align: center;
+    margin: 0 5% 0 35%;
+    bottom: 60px;
 }
 
 .notice--visible {
 	opacity: 1;
-    padding: 25px 40px;
 	transition: opacity 0.2s ease;
 }
