--- a/src/app.css
+++ b/src/app.css
@@ -85,6 +85,56 @@ body {
 	text-align: center;
 }
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 130%;
+  left: 60%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip.copied .tooltiptext {
+	visibility: visible;
+	opacity: 1;
+	background: green;
+	transition: all 0.4s ease;
+}
+
+.tooltip.copied .tooltiptext::after {
+	border-color: green transparent transparent transparent;
+	transition: all 0.4s ease;
+}
+
 @media only screen and (max-width: 480px) {
 	
 	#achievements-header {
