--- a/src/routes/dashboard-page.css
+++ b/src/routes/dashboard-page.css
@@ -1,3 +1,26 @@
+.referral .section-value {
+	display: flex;
+	align-items: center;
+}
+
+.referral .section-value a {
+	margin-left: 10px;
+	transition: background 0.2s ease;
+	background: rgba(0,0,0,0);
+}
+
+.referral .section-value a:hover {
+	transition: background 0.2s ease;
+	background: rgba(0,0,0,.3);
+	border-radius: 5px;
+}
+
+.referral .section-value img {
+	width: 20px;
+	height: 20px;
+	padding: 5px;
+}
+
 .general-configuration .delete-channel {
 	flex-direction: column;
 	flex: 1;
@@ -553,8 +576,8 @@
 }
 
 .saveReorder--button img {
-	height: 50px;
-	width: 50px;
+	height: 50px !important;
+	width: 50px !important;
 	display: block;
 }
 
@@ -706,5 +729,9 @@
 
 	.image--label {
 		width: 110px;
+	}
+	.saveReorder--button img {
+		width: 40px !important;
+		height: 40px !important;
 	}
 }
