Action button closes on blur; disable rank temp

--- a/src/components/loading-spinner.css
+++ b/src/components/loading-spinner.css
@@ -6,6 +6,7 @@
 .loading-spinner--full {
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     background: rgba(0,0,0,0.5);
     height: 100%;
