--- a/src/routes/dashboard-page.css
+++ b/src/routes/dashboard-page.css
@@ -602,6 +602,29 @@
 	margin: 0;
 }
 
+.events-wrapper {
+	display: flex;
+	flex-direction: column;
+}
+
+.events-wrapper .event {
+	display: flex;
+	padding: 10px 20px;
+}
+
+.events-wrapper .event.stripe {
+	background-color: rgba(0,0,0,0.4);
+}
+
+.events-wrapper .event-title {
+	flex: 1;
+}
+
+.events-wrapper .event-achievement {
+	font-style: italic;
+	font-weight: bold;
+}
+
 @media only screen and (max-width: 480px) {
 	.manage-container .manage-tabs {
 		overflow-x: scroll;
