--- a/src/components/alert-configuration-panel.css
+++ b/src/components/alert-configuration-panel.css
@@ -1,6 +1,42 @@
+.alert-overlay .section-wrapper {
+  padding: 10px 20px;
+  user-select: none;
+}
+
 .alert-overlay .section-value {
   display: flex;
   align-items: center;
+}
+
+.alert-overlay .section-value.column {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.alert-overlay .checkbox {
+  text-align: left;
+}
+
+.alert-overlay #graphic {
+  display: none;
+}
+
+#alert-textColor {
+  cursor: pointer;
+}
+
+.alert-overlay .alert-graphic .defaultIcon {
+  height: auto;
+  width: auto;
+  max-width: 250px;
+  margin-left: 0;
+  padding: 5px;
+}
+
+.alert-overlay .alert-graphic .defaultIcon img {
+  height: inherit;
+  width: inherit;
+  max-width: inherit;
 }
 
 .alert-overlay .section-group {
@@ -142,7 +178,7 @@
     cursor: pointer;
 }
 
-#alert-chat {
+.alert-checkbox {
     width: 25px;
     height: 25px;
     margin-left: 0;
