--- a/src/components/channel-integrations-panel.css
+++ b/src/components/channel-integrations-panel.css
@@ -22,6 +22,10 @@
     margin-right: 0;
 }
 
+.my-integrations-header {
+    padding-bottom: 10px;
+}
+
 .streamlabs--left {
 	padding: 20px;
     background: #BBB;
