--- a/src/routes/achievement-page.css
+++ b/src/routes/achievement-page.css
@@ -205,6 +205,27 @@
     cursor: pointer;
 }
 
+.achievement-platforms {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%
+}
+
+.achievement-platforms label {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.achievement-platforms input {
+	display: none;
+}
+
+.achievement-platforms .platformLink {
+	cursor: pointer;
+}
+
 @media only screen and (max-width: 480px) {
 	.achievement-wrapper h4 {
 		padding-left: 10px;
