--- a/src/components/achievement.css
+++ b/src/components/achievement.css
@@ -129,7 +129,7 @@
 }
 
 .achievement-menu.visible {
-    width:150px;
+    width:160px;
 }
 
 .achievement-menu--button {
@@ -171,7 +171,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 118px;
+    width: 128px;
     justify-content: space-evenly;
 }
 
@@ -201,6 +201,10 @@
     height: 32px;
 }
 
+.achievement--test {
+    height: 32px;
+}
+
 .achievement--edit {
     cursor: pointer;
 }
@@ -215,7 +219,8 @@
 }
 
 .achievement--limited img,
-.achievement--gift img {
+.achievement--gift img,
+.achievement--test img {
     width:32px;
 }
 
