--- a/src/components/streamlabs-panel.css
+++ b/src/components/streamlabs-panel.css
@@ -90,6 +90,10 @@
     margin-bottom: 10px;
 }
 
+.integration--streamlabs .integration-header {
+    border-radius: 6px;
+}
+
 .streamlabs--content {
 	padding: 10px;
 	display: flex;
