--- a/src/routes/home-page.css
+++ b/src/routes/home-page.css
@@ -1,3 +1,9 @@
+.channel-item--identifier img {
+	width: 24px;
+	height: 24px;
+	margin-right: 5px;
+}
+
 .main-content {
 	max-width: 800px;
 	margin: 20px auto 0;
