--- a/src/components/achievement.css
+++ b/src/components/achievement.css
@@ -140,6 +140,7 @@
     justify-content: center;
     cursor: pointer;
     transition: all 0.2s ease;
+    align-items: center;
 }
 
 .achievement-menu--button:hover {
