--- a/src/routes/achievement-page.css
+++ b/src/routes/achievement-page.css
@@ -108,6 +108,12 @@
     margin-bottom: 15px;
 }
 
+.infoHelpText {
+	text-align: center;
+	padding-top: 10px;
+	margin-bottom: 15px;
+}
+
 .checkboxes {
 	display: flex;
 	width: 100%;
